RESOLVED FIXED183549
REGRESSION(r211643): Dismissing WKActionSheet should not also dismiss its presenting view controller
https://bugs.webkit.org/show_bug.cgi?id=183549
Summary REGRESSION(r211643): Dismissing WKActionSheet should not also dismiss its pre...
Wenson Hsieh
Reported 2018-03-11 14:41:05 PDT
Attachments
Patch (26.59 KB, patch)
2018-03-11 15:15 PDT, Wenson Hsieh
no flags
Fix macOS builds (26.69 KB, patch)
2018-03-11 15:19 PDT, Wenson Hsieh
no flags
Fix open source iOS builds. (27.43 KB, patch)
2018-03-11 15:49 PDT, Wenson Hsieh
no flags
Really fix open source iOS builds. (27.50 KB, patch)
2018-03-11 15:58 PDT, Wenson Hsieh
aestes: review+
Patch for landing (27.49 KB, patch)
2018-03-12 11:48 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2018-03-11 15:15:05 PDT
Wenson Hsieh
Comment 2 2018-03-11 15:19:17 PDT
Created attachment 335548 [details] Fix macOS builds
Wenson Hsieh
Comment 3 2018-03-11 15:49:31 PDT
Created attachment 335552 [details] Fix open source iOS builds.
Wenson Hsieh
Comment 4 2018-03-11 15:58:20 PDT
Created attachment 335553 [details] Really fix open source iOS builds.
Andy Estes
Comment 5 2018-03-12 09:32:48 PDT
Comment on attachment 335553 [details] Really fix open source iOS builds. View in context: https://bugs.webkit.org/attachment.cgi?id=335553&action=review > Tools/TestWebKitAPI/ClassMethodSwizzler.mm:27 > +#include "config.h" > +#include "ClassMethodSwizzler.h" #import > Tools/TestWebKitAPI/Tests/ios/ActionSheetTests.mm:26 > #include "config.h" #import > Tools/TestWebKitAPI/ios/TestWKWebViewController.h:26 > +#pragma once No need for this. > Tools/TestWebKitAPI/ios/TestWKWebViewController.mm:31 > +#include "config.h" > +#include "TestWKWebViewController.h" > + > +#if PLATFORM(IOS) > + > +#include <wtf/BlockPtr.h> #import
Wenson Hsieh
Comment 6 2018-03-12 09:45:18 PDT
Comment on attachment 335553 [details] Really fix open source iOS builds. View in context: https://bugs.webkit.org/attachment.cgi?id=335553&action=review Thanks for the review! >> Tools/TestWebKitAPI/ClassMethodSwizzler.mm:27 >> +#include "ClassMethodSwizzler.h" > > #import Fixed. >> Tools/TestWebKitAPI/Tests/ios/ActionSheetTests.mm:26 >> #include "config.h" > > #import Fixed. >> Tools/TestWebKitAPI/ios/TestWKWebViewController.h:26 >> +#pragma once > > No need for this. Removed. >> Tools/TestWebKitAPI/ios/TestWKWebViewController.mm:31 >> +#include <wtf/BlockPtr.h> > > #import Fixed.
Wenson Hsieh
Comment 7 2018-03-12 11:48:52 PDT
Created attachment 335614 [details] Patch for landing
WebKit Commit Bot
Comment 8 2018-03-12 12:25:23 PDT
Comment on attachment 335614 [details] Patch for landing Clearing flags on attachment: 335614 Committed r229542: <https://trac.webkit.org/changeset/229542>
Tim Horton
Comment 9 2018-06-05 15:41:06 PDT
*** Bug 185257 has been marked as a duplicate of this bug. ***
Wenson Hsieh
Comment 10 2018-07-27 10:27:05 PDT
*** Bug 187926 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.